force-app/main/form-builder/objects/Question_Rule__c/Question_Rule__c.object-meta.xml
<CustomObject>
    <label>Question Rule</label>
    <nameField>
        <label>Question Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>