force-app/main/form-builder/objects/Question_Rule__c/fields/Autopopulate_Source_Path__c.field-meta.xml
<CustomField>
    <fullName>Autopopulate_Source_Path__c</fullName>
    <label>Autopopulate Source Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>