force-app/main/form-builder/objects/Question_Rule__c/fields/Autopopulate_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Autopopulate_Source_Type__c</fullName>
    <label>Autopopulate Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw</fullName>
                <default>true</default>
                <label>Raw</label>
            </value>
            <value>
                <fullName>Context</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>