force-app/main/form-builder/objects/Question_Rule__c/fields/Autopopulate_Value_Raw__c.field-meta.xml
<CustomField>
    <fullName>Autopopulate_Value_Raw__c</fullName>
    <label>Autopopulate Value Raw</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>