force-app/main/form-builder/objects/Question_Rule__c/fields/Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Logic_Type__c</fullName>
    <label>Logic Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>