force-app/main/form-builder/objects/Question_Rule__c/fields/Overwrite_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Picklist_Values__c</fullName>
    <label>Overwrite Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>