force-app/main/form-builder/objects/Question_Rule__c/fields/Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Question_Catalog__c</fullName>
    <label>Question Catalog</label>
    <referenceTo>Question_Catalog__c</referenceTo>
    <relationshipLabel>Question Rules</relationshipLabel>
    <relationshipName>Question_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>