force-app/main/form-builder/objects/Question_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>ReadOnly</fullName>
            </value>
            <value>
                <fullName>Autopopulated</fullName>
            </value>
            <value>
                <fullName>Overwrite Picklist Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>